creada la carpeta en donde se ve el boton de volver atras con react router

--- a/volver_atras/package.json
+++ b/volver_atras/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rutas_imagenes",
+  "name": "volver_atras",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,6 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
